third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/features/complex-expressions/alternate_exprs_range_nonlit_upper_bound.rs
const TWOFIVEFIVE: u8 = 255;

#[derive(num_enum::TryFromPrimitive)]
#[repr(u8)]
enum Numbers {
    Zero = 0,
    #[num_enum(alternatives = [2..=TWOFIVEFIVE])]
    NonZero = 1,
}

fn main() {

}
